# redis_search_poc

./: .env.example  README.md  display.py  docker-compose.yaml  main.py  pyproject.toml
api/: __init__.py  auth.py  crud.py  db.py  deps.py  fallback.db  main.py  schemas.py
api/routes/: __init__.py  internal.py  products.py  users.py
redis_testing/: __init__.py  cache.py  cache_example.py  low.py  utils.py
redis_testing/om/: __init__.py  __main__.py  demo.py  example.py  utils.py
redis_testing/om/product/: __init__.py  manager.py  model.py  service.py  utils.py
redis_testing/om/user/: __init__.py  manager.py  model.py  service.py  utils.py
