[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redis-search-poc"
version = "0.1.0"
description = "POC para explorar Redis Search e Redis OM (cache com fallback API)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=40.1.2",
    "fastapi>=0.128.2",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.1",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "redis-om>=1.0.6",
    "rich>=14.3.2",
    "ruff>=0.15.0",
    "typer>=0.21.1",
]

[project.scripts]
run-api = "api.main:run"
run-main = "main:run"

[tool.hatch.build.targets.wheel]
packages = ["api", "redis_testing"]
